--- a/Basis/templates/Basis/detail.html
+++ b/Basis/templates/Basis/detail.html
@@ -42,7 +42,7 @@
             {% endif %}
             {% if popup_button %}
             <p class="deletelink-box">
-                <a class="addlink related-widget-wrapper-link add-related" id="popup_button.id" href="{{ popup_button.href }}?_to_field=id&amp;_popup=1" title="{{ popup_button.title }}">{{ popup_button.name|upper }}</a>
+                <a class="addlink related-widget-wrapper-link add-related" id="popup_button.id" href="{{ popup_button.href }}?_to_field=id&amp;_popup=1">{{ popup_button.name|upper }}</a>
             </p>
             {% endif %}
         </div>
