--- a/Basis/templates/Basis/simple_table.html
+++ b/Basis/templates/Basis/simple_table.html
@@ -6,9 +6,7 @@
     {% if add %}
     <ul class="object-tools">
         <li>
-            <a href="add/{{ url_args }}" class="addlink">
-                {{ add }} hinzufügen
-            </a>
+            <a href="add/{{ url_args }}" class="addlink">{{ add }}</a>
         </li>   
     </ul>
     {% endif %}
