11/04 add submit script on filter selector

--- a/Basis/templates/Basis/header.html
+++ b/Basis/templates/Basis/header.html
@@ -44,6 +44,7 @@
         <script type="text/javascript" src="{% static "admin/js/prepopulate.js" %}"></script>
         <script type="text/javascript" src="{% static "admin/js/vendor/xregexp/xregexp.js" %}"></script>
         <script type="text/javascript">function dismissAddAnotherPopup(win) {win.close();}</script>
+        <script type="text/javascript" src="{% static "project/js/onchange.js" %}"></script>
     </head>
     <body class="menu-pinned change-list {% if popup %}popup{% endif %}">
         <!-- Container -->
