--- a/Basis/templates/Basis/simple_table.html
+++ b/Basis/templates/Basis/simple_table.html
@@ -22,7 +22,7 @@
             {% if filter %}
             <form id="filter-form" action="" method="get">
                 <p>{{ filter.form }}
-                <input type="submit" value="Filtern" /></p>
+                <!--input type="submit" value="Filtern" /--></p>
             </form>
             {% endif %}
         </div>
