--- a/Basis/templates/Basis/multiforms.html
+++ b/Basis/templates/Basis/multiforms.html
@@ -30,7 +30,7 @@
             <div class="submit-row">
                 {% if back_button %}
                     {% if popup %}
-                        <a href="javascript:window.close()" class="closelink">{{ back_button.0|upper }}</a>
+                        <a href="javascript:opener.location.reload(false);window.close();" class="closelink">{{ back_button.0|upper }}</a>
                     {% else %}
                         <a href="{{ back_button.1 }}" class="closelink">{{ back_button.0|upper }}</a>
                     {% endif %}
