--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -8,23 +8,25 @@
             <div class="results">
                 <div class="flow">
                     <div class="sidebar-section">
-                        <span class="sidebar-title">Ablauf</span>
+                        <span class="sidebar-title">Tour für Fahrgast anlegen</span>
+                        <a class="sidebar-link" href="Klienten/fahrgaeste/">Fahrgast für Tour auswählen&nbsp;<img src="{% static "project/img/fahrplan.png" %}" alt="Tour hinzuf&uuml;gen" title="Tour hinzuf&uuml;gen"></a>
                     </div>
                     <div class="sidebar-section">
-                        <a class="sidebar-link" href="Klienten/dienstleister/">Dienstleister vorhanden ?</a>
-                        <a class="sidebar-link" href="Klienten/dienstleister/add/"><span class="sidebar-right-arrow icon-arrow-right"></span>anlegen</a>
+                        <span class="sidebar-title">Touren ansehen</span>
+                        <a class="sidebar-link" href="Tour/tour/">Tour anzeigen</a>
                     </div>
                     <div class="sidebar-section">
-                        <a class="sidebar-link" href="Klienten/fahrgaeste/">Fahrgast vorhanden ?</a>
-                        <a class="sidebar-link" href="Klienten/fahrgaeste/add/"><span class="sidebar-right-arrow icon-arrow-right"></span>anlegen</a>
+                        <span class="sidebar-title">Fahrgäste bearbeiten</span>
+                        <a class="sidebar-link" href="Klienten/fahrgaeste/">Fahrgäste ansehen</a>
+                        <a class="sidebar-link" href="Klienten/fahrgaeste/add/">Fahrgast anlegen</a>
                     </div>
                     <div class="sidebar-section">
-                        <a class="sidebar-link" href="Klienten/fahrgaeste/"><img src="{% static "project/img/fahrplan.png" %}" alt="Tour hinzuf&uuml;gen" title="Tour hinzuf&uuml;gen">&nbsp;Fahrgast für Tour auswählen</a>
+                        <span class="sidebar-title">Dienstleister bearbeiten</span>
+                        <a class="sidebar-link" href="Klienten/dienstleister/">Dienstleister ansehen</a>
+                        <a class="sidebar-link" href="Klienten/dienstleister/add/">Dienstleister anlegen</a>
                     </div>
                     <div class="sidebar-section">
-                            <a class="sidebar-link" href="Tour/tour/">Tour anzeigen</a>
-                    </div>
-                    <div class="sidebar-section">
+                        <span class="sidebar-title">Fahrpläne anzeigen</span>
                             <a class="sidebar-link" href="Einsatztage/fahrer/">Fahrtage anzeigen und als Email verschicken</a>
                     </div>                
                 </div>
