--- a/Basis/templates/Basis/detail.html
+++ b/Basis/templates/Basis/detail.html
@@ -28,21 +28,16 @@
         </div>
         <div class="submit-row">
             {% if back_button %}
-                {% if popup %}
-                    <a href="javascript:window.close()" class="closelink">{{ back_button|upper }}</a>
+            {% if popup %}
+                    <a href="javascript:opener.location.reload(false);window.close();" class="closelink">{{ back_button.0|upper }}</a>
                 {% else %}
-                    <a href="javascript:history.go(-1)" class="closelink">{{ back_button|upper }}</a>
+                    <a href="{{ back_button.1 }}" class="closelink">{{ back_button.0|upper }}</a>
                 {% endif %}
             {% endif %}
             <input type="submit" value="{{ submit_button|default:'Sichern' }}" class="default" name="_save">
             {% if delete_button %}
             <p class="deletelink-box">
                 <a href="delete/{{ url_args }}" class="deletelink">{{ delete_button|default:'Löschen' }}</a>
-            </p>
-            {% endif %}
-            {% if popup_button %}
-            <p class="deletelink-box">
-                <a class="addlink related-widget-wrapper-link add-related" id="popup_button.id" href="{{ popup_button.href }}?_popup=1">{{ popup_button.name|upper }}</a>
             </p>
             {% endif %}
         </div>
