--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -8,12 +8,9 @@
             <div class="results">
                 <div class="flow">
                     <div class="sidebar-section">
-                        <span class="sidebar-title">Tour für Fahrgast anlegen</span>
+                        <span class="sidebar-title">Touren bearbeiten</span>
                         <a class="sidebar-link" href="Klienten/fahrgaeste/">Fahrgast für Tour auswählen&nbsp;<img src="{% static "project/img/fahrplan.png" %}" alt="Tour hinzuf&uuml;gen" title="Tour hinzuf&uuml;gen"></a>
-                    </div>
-                    <div class="sidebar-section">
-                        <span class="sidebar-title">Touren ansehen</span>
-                        <a class="sidebar-link" href="Tour/tour/">Tour anzeigen</a>
+                        <a class="sidebar-link" href="Tour/tour/">Touren ansehen</a>
                     </div>
                     <div class="sidebar-section">
                         <span class="sidebar-title">Fahrgäste bearbeiten</span>
@@ -27,7 +24,7 @@
                     </div>
                     <div class="sidebar-section">
                         <span class="sidebar-title">Fahrpläne anzeigen</span>
-                            <a class="sidebar-link" href="Einsatztage/fahrer/">Fahrtage anzeigen und als Email verschicken</a>
+                            <a class="sidebar-link" href="Einsatztage/fahrer/">Fahrtage ansehen und als Email verschicken</a>
                     </div>                
                 </div>
                 <div class="image">
