12/03 extend tour validation

--- a/Klienten/templates/Klienten/dsgvo.html
+++ b/Klienten/templates/Klienten/dsgvo.html
@@ -21,6 +21,6 @@ Unterschrift
 </p>
 {% endif %}
 <!--div class="submit-row"-->
-    {% if back_button %}<br /><br /><a href="javascript:history.go(-1)" class="closelink">{{ back_button }}</a>{% endif %}
+    {% if back_button.1 %}<br /><br /><a href="javascript:history.go(-1)" class="closelink">{{ back_button.0 }}</a>{% endif %}
 <!--/div-->
 {% endblock %}
