--- a/static/project/css/base.css
+++ b/static/project/css/base.css
@@ -252,3 +252,8 @@ input[type="submit"]:hover {
 ul.messagelist li.success, ul.messagelist li.info, ul.messagelist li.error {
     color: #5c5c5c;
 }
+.conflict {
+    color: red;
+    font-weight: bolder;
+    font-size: 16px;
+}
