--- a/Basis/templates/Basis/header.html
+++ b/Basis/templates/Basis/header.html
@@ -52,7 +52,7 @@
             <!-- Suppress header -->
             <!-- Header -->
             <div id="header">
-                <div id="title">{% settings_value "PORTAL" %}</div>
+                <div id="title"><a href="/" title="Startseite">{% settings_value "PORTAL" %}</a></div>
 
                 <div id="branding">
                     {% block branding %}{% endblock %}
