12/16 Add model tests and FAQ app

--- a/Basis/templates/Basis/simple_table.html
+++ b/Basis/templates/Basis/simple_table.html
@@ -1,4 +1,4 @@
-{% extends 'Basis/header.html' %}
+{% extends 'Basis/base.html' %}
 {% load render_table from django_tables2 %}
 {% load static %}
 {% block content %}
