--- a/Einsatztage/templates/Einsatztage/tour_as_pdf.html
+++ b/Einsatztage/templates/Einsatztage/tour_as_pdf.html
@@ -1,4 +1,4 @@
-{% extends 'Basis/header.html' %}
+{% extends 'Basis/base.html' %}
 {% block title %}<title>Tour anzeigen</title>{% endblock %}
 {% block content %}
         <h1>Fahrplan {{ fahrtag_liste.team.bus }} am {{ fahrtag_liste.datum }}</h1>
