--- a/Klienten/templates/Klienten/dsgvo.html
+++ b/Klienten/templates/Klienten/dsgvo.html
@@ -1,4 +1,4 @@
-{% extends 'Basis/header.html' %}
+{% extends 'Basis/base.html' %}
 {% block content %}
 <h1 style="width: 800px;">Datenschutzerklärung zwecks Beförderung mit dem Bürgerbus der VG Alzey-Land</h1>
 
