--- a/Basis/templates/registration/login.html
+++ b/Basis/templates/registration/login.html
@@ -11,7 +11,8 @@
             {{ hidden_field }}
         {% endfor %}
         <div class="form-row">
-                {{ form.as_p }}
+            {{ form.as_p }}
+            <label></label><a href="{% url 'password_reset' %}">Passwort vergessen</a>
         </div>
         <div class="submit-row">
             <input class="default" type="submit" value="Login">
