--- a/Basis/templates/registration/logout_success.html
+++ b/Basis/templates/registration/logout_success.html
@@ -7,7 +7,7 @@
         <form id="changelist-form">
             <div class="results">
                 <p>Vielen Dank, dass Sie hier ein paar nette Minuten verbracht haben.</p>
-                <p><a href="/">Erneut anmelden</a></p>
+                <p><a href="{% url 'login' %}">Erneut anmelden</a></p>
             </div>
         </form>
     </div>
