Add password reset

--- a/Basis/templates/registration/password_reset_email.html
+++ b/Basis/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-Zum Zurücksetzen des Passworts für Ihren {{ user.get_username }} Bürgerbus Benutzer
+Zum Zurücksetzen des Passworts für Ihren Bürgerbus Benutzer "{{ user.get_username }}"
 bitte den folgenden Link anclicken:
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
