force password change on first login

--- a/Basis/templates/registration/password_reset_email.html
+++ b/Basis/templates/registration/password_reset_email.html
@@ -4,8 +4,8 @@ bitte den folgenden Link anclicken:
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
-Falls der Link nicht funktioniert, bitte den Link kopieren und in einem neuen Browserfenster ausführen.
+Falls der Link nicht funktioniert, dann kopieren Sie ihn bitte und führen ihn in einem neuen Browserfenster aus.
 
 Mit freundlichen Grüßen
-Mein Bürgerbus Team
+Ihr Bürgerbus Team
 {% endautoescape %}
