--- a/Basis/templates/registration/password_new_email.html
+++ b/Basis/templates/registration/password_new_email.html
@@ -1,6 +1,8 @@
 {% autoescape off %}
-Dies ist Ihr neuer Bürgerbus Benutzername: "{{ username }}" und Passwort: "{{ password }}", welches Sie bei der ersten Anmeldung ändern müssen. 
-Bitte beachten Sie, dass Passwörter, die dem Wort "buergerbus" ähnlich sind, abgewiesen werden. 
+Sehr geehrte(r) {{ first_name }} {{ last_name }},
+
+Dies ist Ihr neuer Bürgerbus Benutzername: "{{ username }}" und Passwort: "{{ password }}". 
+Wenn Sie das Passwort ändern möchten, bitte beachten Sie, dass Passwörter, die dem Wort "buergerbus" ähnlich sind, abgewiesen werden. 
 
 Mit diesem Link können Sie sich anmelden: 
 {{ protocol }}://{{ domain }}
