--- a/Klienten/templates/Klienten/dsgvo.html
+++ b/Klienten/templates/Klienten/dsgvo.html
@@ -6,7 +6,7 @@
 
 <p style="width: 800px;text-align: justify;">Hiermit willige ich,
 <b>{{ klient.vorname }}&nbsp;{{ klient.nachname }},&nbsp;{{ klient.ort }}&nbsp;{{ klient.strasse}}&nbsp;{{ klient.hausnr }}</b>, in die Verarbeitung meiner 
-folgenden personenbezogenen Daten <br><b>Name<br>Anschrift<br>Telefon-Nr.<br>Bemerkungen</b><br> durch die Verbandsgemeinde Alzey-Land ein.
+folgenden personenbezogenen Daten:<br> <b>Name, Anschrift, Telefon-Nr., Fahrziel, Fahrzeit, Bemerkungen</b></br>durch die Verbandsgemeinde Alzey-Land ein.
 Die Datenverarbeitung erfolgt ausschließlich zum Zweck der Planung der Fahrten mit dem VG Bürgerbus.<br>
 Die Einwilligung erfolgt auf freiwilliger Basis und ich kann sie jederzeit mit Wirkung für die Zukunft widerrufen. 
 Ab Zugang der Widerrufserklärung dürfen meine Daten nicht weiterverarbeitet werden. Sie sind unverzüglich zu löschen. 
