--- a/static/project/css/base.css
+++ b/static/project/css/base.css
@@ -207,6 +207,8 @@ input[type="text"], input[type="email"], input[type="password"], input[type="url
 }
 div.breadcrumbs {
     color: #38547e;
+    box-shadow: 5px 5px 10px;
+    border-bottom-left-radius: 4px;
 }
 .datetimeshortcuts {
     display: none;
@@ -265,4 +267,11 @@ ul.messagelist li.success, ul.messagelist li.info, ul.messagelist li.error {
     color: red;
     font-weight: bolder;
     font-size: 16px;
+}
+fieldset.module, #changelist {
+    box-shadow: 5px 5px 10px;
+    border-radius: 4px;
+}
+.submit-row {
+    box-shadow: 5px 5px 10px;
 }
