--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -26,7 +26,7 @@
                     {% endif %}
                 </div>
                 <div class="image">
-                    <p style="text-align: center; padding-top: 50px; padding-bottom: 50px; padding-left: 250px;"><img src="{% static "project/img/Buergerbus-Projektgruppen.jpg" %}"></p>
+                    <p style="text-align: center; padding-left: 100px;"><img src="{% static "project/img/Projektgruppen.jpg" %}" style="width: 630px;"></p>
                 </div>
             </div>
         </form>
