--- a/static/project/css/base.css
+++ b/static/project/css/base.css
@@ -210,6 +210,8 @@ div.breadcrumbs {
     color: #38547e;
     box-shadow: 5px 5px 10px;
     border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    margin: 0 20px;
 }
 .datetimeshortcuts {
     display: none;
@@ -277,7 +279,7 @@ fieldset.module, #changelist {
     box-shadow: 5px 5px 10px;
 }
 #toolbar {
-    min-height: 35px;
+    /*min-height: 35px;*/
 }
 #toolbar a {
     border-radius: 4px;
