--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -25,7 +25,7 @@
                         {% endfor %}
                     {% endif %}
                 </div>
-                <div class="image">
+                <div class="index-image">
                     <p style="text-align: center; padding-left: 100px;"><img src="{% static "project/img/Projektgruppen.jpg" %}" style="width: 630px;"></p>
                 </div>
             </div>
